Fix title align

--- a/src/components/Title/title.module.scss
+++ b/src/components/Title/title.module.scss
@@ -1,11 +1,11 @@
 .title {
-    .center {
+    &.center {
         text-align: center;
     }
-    .left {
+    &.left {
         text-align: left;
     }
-    .right {
+    &.right {
         text-align: right;
     }
 }
